syntax = "proto3";

package downloadtask.v1;

option go_package = "github.com/yuisofull/goload/internal/downloadtask/pb;pb";

// ===== Download Task Service =====
service DownloadTaskService {
  rpc CreateDownloadTask(CreateDownloadTaskRequest) returns (CreateDownloadTaskResponse) {}
  rpc GetDownloadTaskList(GetDownloadTaskListRequest) returns (GetDownloadTaskListResponse) {}
  rpc UpdateDownloadTask(UpdateDownloadTaskRequest) returns (UpdateDownloadTaskResponse) {}
  rpc DeleteDownloadTask(DeleteDownloadTaskRequest) returns (DeleteDownloadTaskResponse) {}
}

// ===== Enums =====
enum DownloadType {
  DOWNLOAD_TYPE_UNSPECIFIED = 0;
  DOWNLOAD_TYPE_HTTP = 1;
}

enum DownloadStatus {
  DOWNLOAD_STATUS_UNSPECIFIED = 0;
  DOWNLOAD_STATUS_PENDING = 1;
  DOWNLOAD_STATUS_DOWNLOADING = 2;
  DOWNLOAD_STATUS_FAILED = 3;
  DOWNLOAD_STATUS_SUCCESS = 4;
}

// ===== Messages =====
message DownloadTask {
  uint64 id = 1;
  uint64 of_account_id = 2;
  DownloadType download_type = 3;
  string url = 4;
  DownloadStatus download_status = 5;
}

message CreateDownloadTaskRequest {
  string token = 1;
  DownloadType download_type = 2;
  string url = 3;
}

message CreateDownloadTaskResponse {
  DownloadTask download_task = 1;
}

message GetDownloadTaskListRequest {
  string token = 1;
  uint64 offset = 2;
  uint64 limit = 3;
}

message GetDownloadTaskListResponse {
  repeated DownloadTask download_tasks = 1;
  uint64 total_count = 2;
}

message UpdateDownloadTaskRequest {
  string token = 1;
  uint64 download_task_id = 2;
  string url = 3;
}

message UpdateDownloadTaskResponse {
  DownloadTask download_task = 1;
}

message DeleteDownloadTaskRequest {
  string token = 1;
  uint64 download_task_id = 2;
}

message DeleteDownloadTaskResponse {}
